--- a/Movies/app/src/main/res/values/strings.xml
+++ b/Movies/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Movies</string>
     <string name="action_settings">Settings</string>
     <string name="action_refresh" translatable="false">Refresh</string>
-    <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_detail">Movie Details</string>
 </resources>
